--- a/index.html
+++ b/index.html
@@ -76,10 +76,23 @@ tbody tr:hover {background:#d1e7ff;}
 </table>
 </div>
 
-<!-- Placeholder for Ads or Donations -->
-<div class="ads">
-<h3>Support this App</h3>
-<p>Add your donation button or ad script here (e.g., PayPal, Ko-fi, or AdSense)</p>
+<!-- Donation Section -->
+<div class="ads" style="text-align:center; padding:15px; background:#fff; margin:10px auto; border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.2); max-width:400px;">
+  <h3 style="margin-bottom:10px;">Support this App</h3>
+  <p>If you enjoy using this app, consider supporting me!</p>
+
+  <!-- PayPal Donate Button -->
+  <form action="https://www.paypal.com/donate" method="post" target="_top" style="margin-top:10px;">
+    <input type="hidden" name="hosted_button_id" value="WYBRQ9EGCMK4Y" />
+    <input type="image" 
+           src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" 
+           border="0" 
+           name="submit" 
+           title="PayPal - The safer, easier way to pay online!" 
+           alt="Donate with PayPal button" 
+           style="max-width:100%; height:auto;" />
+    <img alt="" border="0" src="https://www.paypal.com/en_ZA/i/scr/pixel.gif" width="1" height="1" />
+  </form>
 </div>
 
 <script>
