--- a/index.html
+++ b/index.html
@@ -2,198 +2,220 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Run Tracker</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <style>
-    body { background: #f9fafb; }
-    .card { background: white; border-radius: 1rem; padding: 1.5rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .badge { background: #e5e7eb; border-radius: 9999px; padding: 0.25rem 0.75rem; font-size: 0.8rem; margin: 0.25rem; display: inline-block; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f5f5f5;
+    }
+    h1 {
+      text-align: center;
+    }
+    form, .activities, .leaderboard, .ads {
+      background: #fff;
+      padding: 15px;
+      margin: 15px auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      max-width: 600px;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+    input, select, button {
+      padding: 8px;
+      width: 100%;
+      margin-top: 5px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
+    }
+    table, th, td {
+      border: 1px solid #ccc;
+    }
+    th, td {
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background: #eee;
+    }
   </style>
 </head>
-<body class="p-4">
-  <div class="max-w-4xl mx-auto space-y-6">
+<body>
+  <h1>Run Tracker</h1>
 
-    <!-- Header -->
-    <div class="card text-center">
-      <h1 class="text-2xl font-bold">🏃 Run Tracker</h1>
-      <p class="text-gray-600">Track runs, earn badges, and climb the leaderboard!</p>
-    </div>
+  <!-- Add New Run -->
+  <form id="runForm">
+    <label>Date: <input type="date" id="date" required></label>
+    <label>Name: <input type="text" id="name" required></label>
+    <label>Distance (km): <input type="number" id="distance" step="0.01" required></label>
+    <label>Time (hh:mm:ss): <input type="time" id="time" step="1" required></label>
+    <button type="submit">Add Run</button>
+  </form>
 
-    <!-- Run Form -->
-    <div class="card">
-      <h2 class="text-xl font-semibold mb-3">Add a Run</h2>
-      <form id="runForm" class="grid gap-3">
-        <input type="text" id="name" placeholder="Your Name" class="border p-2 rounded" required />
-        <input type="number" id="distance" placeholder="Distance (km)" class="border p-2 rounded" required />
-        <input type="time" step="1" id="time" class="border p-2 rounded" required />
-        <button class="bg-blue-500 hover:bg-blue-600 text-white p-2 rounded">Submit Run</button>
-      </form>
-    </div>
+  <!-- Filter -->
+  <div class="filter" style="max-width:600px; margin:0 auto;">
+    <label for="filterSelect">Filter by Name:</label>
+    <select id="filterSelect">
+      <option value="">--All Names--</option>
+    </select>
+  </div>
 
-    <!-- Filter -->
-    <div class="card">
-      <label class="font-semibold">Filter by Name:</label>
-      <select id="filterSelect" class="border p-2 rounded mt-1 w-full"></select>
-    </div>
+  <!-- Past Activities -->
+  <div class="activities">
+    <h2>Past Activities</h2>
+    <table id="activitiesTable">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Name</th>
+          <th>Distance (km)</th>
+          <th>Time</th>
+          <th>Pace (min/km)</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-    <!-- Leaderboard -->
-    <div class="card">
-      <h2 class="text-xl font-semibold mb-3">🏆 Leaderboard</h2>
-      <table class="w-full border-collapse">
-        <thead>
-          <tr class="bg-gray-100">
-            <th class="p-2 border">Name</th>
-            <th class="p-2 border">Total Distance (km)</th>
-            <th class="p-2 border">Runs</th>
-            <th class="p-2 border">Best Pace</th>
-            <th class="p-2 border">Points</th>
-            <th class="p-2 border">Badges</th>
-          </tr>
-        </thead>
-        <tbody id="leaderboard"></tbody>
-      </table>
-    </div>
+  <!-- Leaderboard -->
+  <div class="leaderboard">
+    <h2>Leaderboard</h2>
+    <table id="leaderboardTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Total Distance (km)</th>
+          <th>Total Time</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-    <!-- Donate -->
-    <div class="card text-center">
-      <h2 class="text-xl font-semibold mb-2">Support this Project ❤️</h2>
-      <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="hosted_button_id" value="WYBRQ9EGCMK4Y" />
-        <input type="image" 
-          src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" 
-          border="0" name="submit" 
-          title="PayPal - The safer, easier way to pay online!" 
-          alt="Donate with PayPal button" />
-        <img alt="" border="0" 
-          src="https://www.paypal.com/en_ZA/i/scr/pixel.gif" 
-          width="1" height="1" />
-      </form>
-    </div>
+  <!-- Donation Section -->
+  <div class="ads" style="text-align:center;">
+    <h3>Support this App</h3>
+    <p>If you enjoy using this app, consider supporting me!</p>
+    <form action="https://www.paypal.com/donate" method="post" target="_top">
+      <input type="hidden" name="hosted_button_id" value="WYBRQ9EGCMK4Y" />
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" 
+             border="0" name="submit" 
+             title="PayPal - The safer, easier way to pay online!" 
+             alt="Donate with PayPal button" 
+             style="max-width:100%; height:auto;" />
+      <img alt="" border="0" src="https://www.paypal.com/en_ZA/i/scr/pixel.gif" width="1" height="1" />
+    </form>
   </div>
 
   <script>
-    const scriptUrl = "https://script.google.com/macros/s/AKfycbwEVecynbG6wXvjp7IRw7mE9iaDyin-N8vA2ylv0IXZi8syGcKNF8z_MWRoXVhuleUxEg/exec";
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbwjk_zvgTdrzKiMaGxMO7VMVjOx0X2qujBkS7dQ7yAl6yZtgJx0H6k_NCVEKu_B7lsZzg/exec";
     const runForm = document.getElementById("runForm");
-    const leaderboardBody = document.getElementById("leaderboard");
+    const activitiesTable = document.querySelector("#activitiesTable tbody");
+    const leaderboardTable = document.querySelector("#leaderboardTable tbody");
     const filterSelect = document.getElementById("filterSelect");
-    let activities = [];
 
-    // Convert hh:mm:ss -> seconds
-    function parseTimeToSeconds(timeStr) {
-      const parts = timeStr.split(":").map(Number);
-      let sec = 0;
-      if (parts.length === 3) sec = parts[0]*3600 + parts[1]*60 + parts[2];
-      else if (parts.length === 2) sec = parts[0]*60 + parts[1];
-      return sec;
+    // Convert hh:mm:ss into seconds
+    function timeToSeconds(t) {
+      const parts = t.split(":").map(Number);
+      return parts[0]*3600 + parts[1]*60 + (parts[2] || 0);
     }
 
-    // Format pace mm:ss per km
-    function formatPace(secondsPerKm) {
-      const mins = Math.floor(secondsPerKm / 60);
-      const secs = Math.round(secondsPerKm % 60);
-      return `${mins}:${secs.toString().padStart(2,"0")} /km`;
+    // Convert seconds back to hh:mm:ss
+    function secondsToHMS(sec) {
+      const h = Math.floor(sec / 3600);
+      const m = Math.floor((sec % 3600) / 60);
+      const s = sec % 60;
+      return [h,m,s].map(x=>String(x).padStart(2,'0')).join(":");
     }
 
-    // Calculate badges
-    function getBadges(totalDistance, runs, longest) {
-      let badges = [];
-      if (runs >= 1) badges.push("First Run!!");
-      for (let km=5; km<=50; km+=5) {
-        if (totalDistance >= km) badges.push(`${km}km Total`);
-      }
-      if (totalDistance >= 100) badges.push("100km Club");
-      if (runs >= 10) badges.push("10 Runs Completed");
-      if (longest >= 10) badges.push("Longest Single Run: 10km+");
-      return badges;
+    // Calculate pace
+    function calcPace(distance, timeStr) {
+      const secs = timeToSeconds(timeStr);
+      if (!distance || secs === 0) return "-";
+      const pace = secs / 60 / distance; // min per km
+      const min = Math.floor(pace);
+      const sec = Math.round((pace - min) * 60);
+      return `${min}:${String(sec).padStart(2,'0')}`;
     }
 
     // Fetch activities
     async function fetchActivities() {
       const res = await fetch(scriptUrl);
-      const data = await res.json();
-      activities = data;
+      const activities = await res.json();
 
-      // Remember current filter
+      // Build name dropdown (preserve selection)
       const currentFilter = filterSelect.value.trim().toLowerCase();
-
-      // Clear dropdown
-      filterSelect.innerHTML = '';
-      const allOption = document.createElement('option');
-      allOption.value = '';
-      allOption.textContent = '--All Names--';
-      filterSelect.appendChild(allOption);
-
-      // Unique names
-      const namesSet = new Set(activities.map(r => r.name));
-      namesSet.forEach(name => {
-        const opt = document.createElement('option');
-        opt.value = name;
-        opt.textContent = name;
-        if (name.toLowerCase() === currentFilter) opt.selected = true;
-        filterSelect.appendChild(opt);
+      filterSelect.innerHTML = '<option value="">--All Names--</option>';
+      [...new Set(activities.map(r => r.name))].forEach(name => {
+        const option = document.createElement("option");
+        option.value = name;
+        option.textContent = name;
+        if (name.toLowerCase() === currentFilter) option.selected = true;
+        filterSelect.appendChild(option);
       });
 
-      renderLeaderboard();
-    }
-
-    // Render leaderboard
-    function renderLeaderboard() {
       const filterName = filterSelect.value.trim().toLowerCase();
-      const filtered = filterName 
-        ? activities.filter(r => r.name.toLowerCase() === filterName)
-        : activities;
+      const filtered = filterName ? activities.filter(r => r.name.toLowerCase() === filterName) : activities;
 
-      // Group by name
-      const summary = {};
+      // Fill table
+      activitiesTable.innerHTML = "";
       filtered.forEach(r => {
-        const dist = parseFloat(r.distance);
-        const secs = parseTimeToSeconds(r.time);
-        if (!summary[r.name]) {
-          summary[r.name] = { name: r.name, total: 0, runs: 0, bestPace: Infinity, longest: 0 };
-        }
-        summary[r.name].total += dist;
-        summary[r.name].runs += 1;
-        summary[r.name].longest = Math.max(summary[r.name].longest, dist);
-        const pace = secs / dist;
-        if (pace < summary[r.name].bestPace) summary[r.name].bestPace = pace;
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${r.date}</td>
+          <td>${r.name}</td>
+          <td>${r.distance}</td>
+          <td>${r.time}</td>
+          <td>${calcPace(r.distance, r.time)}</td>`;
+        activitiesTable.appendChild(row);
       });
 
-      // Sort by total distance
-      const leaderboard = Object.values(summary).sort((a,b) => b.total - a.total);
+      // Leaderboard
+      const leaderboard = {};
+      activities.forEach(r => {
+        const secs = timeToSeconds(r.time);
+        if (!leaderboard[r.name]) leaderboard[r.name] = {dist:0, time:0};
+        leaderboard[r.name].dist += parseFloat(r.distance);
+        leaderboard[r.name].time += secs;
+      });
+      const sorted = Object.entries(leaderboard).sort((a,b)=>b[1].dist - a[1].dist);
 
-      leaderboardBody.innerHTML = leaderboard.map(row => {
-        const points = Math.floor(row.total / 5);
-        const badges = getBadges(row.total, row.runs, row.longest);
-        return `<tr>
-          <td class="border p-2">${row.name}</td>
-          <td class="border p-2">${row.total.toFixed(1)}</td>
-          <td class="border p-2">${row.runs}</td>
-          <td class="border p-2">${formatPace(row.bestPace)}</td>
-          <td class="border p-2">${points}</td>
-          <td class="border p-2">${badges.map(b=>`<span class="badge">${b}</span>`).join(" ")}</td>
-        </tr>`;
-      }).join("");
+      leaderboardTable.innerHTML = "";
+      sorted.forEach(([name, vals]) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${name}</td>
+          <td>${vals.dist.toFixed(2)}</td>
+          <td>${secondsToHMS(vals.time)}</td>`;
+        leaderboardTable.appendChild(row);
+      });
     }
 
-    // Submit run
-    runForm.addEventListener("submit", async (e) => {
+    // Add run
+    runForm.addEventListener("submit", async e => {
       e.preventDefault();
-      const name = document.getElementById("name").value.trim();
-      const distance = document.getElementById("distance").value;
-      const time = document.getElementById("time").value;
-
+      const data = {
+        date: document.getElementById("date").value,
+        name: document.getElementById("name").value,
+        distance: document.getElementById("distance").value,
+        time: document.getElementById("time").value
+      };
       await fetch(scriptUrl, {
         method: "POST",
-        body: new URLSearchParams({ name, distance, time })
+        body: JSON.stringify(data)
       });
-
       runForm.reset();
       fetchActivities();
     });
 
-    filterSelect.addEventListener("change", renderLeaderboard);
+    filterSelect.addEventListener("change", fetchActivities);
 
     fetchActivities();
   </script>
